CDB-168 #closes Fixes max-width size of the item so it doesn't break the layout in Firefox

--- a/app/assets/stylesheets/table/table_panel.css.scss
+++ b/app/assets/stylesheets/table/table_panel.css.scss
@@ -1084,7 +1084,7 @@ a.info {
         border-top:1px solid rgba(#E5E5E5,0.5);
         li.custom_color_item {
           span {
-            max-width:270px;
+            max-width:260px;
             @include text-overflow();
           }
         }
